--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,31 @@
 version: '3.3'
 
 services:
-  app:
+  app1:
     build: .
     volumes:
       - "./:/app:delegated"
-      - "./conf/apache-extra.conf:/etc/apache2/conf-enabled/extra.conf"
+      - "./conf1/apache-extra.conf:/etc/apache2/conf-enabled/extra.conf"
     ports:
-      - "127.0.0.1:9090:80"
+      - "127.0.0.1:9091:80"
     user: "${USERID}:${GID}"
     environment:
       - APACHE_RUN_USER=#${USERID}
       - APACHE_RUN_GROUP=#${GID}
       - INFINITE_SCROLLING
+    working_dir: /app
+
+  app2:
+    build: .
+    volumes:
+      - "./:/app:delegated"
+      - "./conf2/apache-extra.conf:/etc/apache2/conf-enabled/extra.conf"
+    ports:
+      - "127.0.0.1:9092:80"
+    user: "${USERID}:${GID}"
+    environment:
+      - APACHE_RUN_USER=#${USERID}
+      - APACHE_RUN_GROUP=#${GID}
+      - INFINITE_SCROLLING
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
     working_dir: /app
